<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="enabled"
        android:title="@string/enabled"/>

    <ListPreference
        android:defaultValue="all"
        android:entries="@array/which_contacts"
        android:entryValues="@array/which_contacts_values"
        android:key="which_contacts"
        android:title="@string/which_contacts" />

    <CheckBoxPreference
        android:key="use_speakerphone"
        android:title="@string/use_speakerphone" />
    <CheckBoxPreference 
        android:key="send_msg"
        android:title="@string/sendMessage"/>
    <CheckBoxPreference
        android:key="no_second_call"
        android:title="@string/no_second_call" />

    <com.answeringmachine.preference.AnsMachineDialogPreference
        android:dialogIcon="@drawable/icon"
        android:dialogMessage="@string/about_message"
        android:dialogTitle="@string/about_title"
        android:key="about"
        android:negativeButtonText="@null"
        android:src="@drawable/icon"
        android:title="@string/about_title" />

</PreferenceScreen>